# upwatch-svn

upwatch/branches/upwatch/: Makefile.am  configure.in  upwatch-spec.def  upwatch-spec.tpl
upwatch/libdbi/libstatgrab/: ChangeLog  Makefile.am  configure.in  libstatgrab.pc.in
upwatch/libdbi/util/: Makefile.am  chklog.c  chklog_options.def  ctime.c  ctime_options.def  slot.c  uwq.c  uwq_options.def  uwregexp.c  uwsaidar.c
upwatch/libdbi/uw_dns/: Makefile.am  probe.def  run.c  uw_dns.conf  uw_dns.def
upwatch/libdbi/uw_httpget/: Makefile.am  probe.def  run.c  uw_httpget.conf  uw_httpget.def
upwatch/libdbi/uw_investigate/: Makefile.am  cmd_options.def  traceroute.h
upwatch/libdbi/uw_mssql/: Makefile.am  run.c  uw_mssql.def
upwatch/libdbi/uw_mysql/: Makefile.am  run.c  uw_mysql.def
upwatch/libdbi/uw_pop3/: Makefile.am  run.c  uw_pop3.conf  uw_pop3.def
upwatch/libdbi/uw_route/: Makefile.am  run.c  uw_route.conf  uw_route.def
upwatch/libdbi/uw_syncprobes/: Makefile.am  run.c  uw_syncprobes.def
upwatch/libdbi/uw_tcpconnect/: Makefile.am  run.c  uw_tcpconnect.def
upwatch/trunk/: BuildRpm  ChangeLog  INSTALL  Makefile.am  Makefile.am.common  Makefile.am.libs  Makefile.am.path  README  RELEASE  TODO  autogen.sh  configure.ac  configure.in  upwatch-spec.def  upwatch-spec.spec  upwatch-spec.tpl
upwatch/trunk/cfg/: bootstrap  bootstrap.local
upwatch/trunk/common/: Makefile.am  common.h  db.c  dbase_options.def  dbase_options_ign.def  generic_options.def  generic_options_ign.def  init-suse.tpl  init.tpl  license_gpl.def  license_proprietary.def  main.c  minimal_options.def  option_realm_ign.def  probe.tpl  probe_generic.def  redhat.tpl  spec.tpl  suse.tpl
upwatch/trunk/compat/: Makefile.am
upwatch/trunk/config/: Makefile.am  cron.daily  logrotate  result.dtd  result.dtd-base  sysconfig  upwatch-base.mysql  upwatch-common.mysql  upwatch-common.pgsql  upwatch-full.mysql  upwatch-full.pgsql  upwatch-probe.mysql  upwatch-realm.mysql  upwatch-realm.pgsql  upwatch.conf  upwatch.redhat  upwatch.suse
upwatch/trunk/doc/: Makefile.am  about.xml  addingaprobe.xml  admin-guide.html  admin-guide.txt  admin-guide.xml  administration.xml  client-about.xml  client-configuration.xml  client-install.xml  configuration.xml  howitallworks.xml  installation.xml  interfaces.xml  iptraf-specs.xml  jadetex.cfg  mysql2db  ping-specs.xml  probesspecs.xml  program-guide.html  program-guide.txt  program-guide.xml  upwatch.html  upwatch.txt  upwatch.xml  upwatch.xsl
upwatch/trunk/libstatgrab/: ChangeLog  Makefile.am  Makefile.in  NEWS  PLATFORMS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
upwatch/trunk/libstatgrab-0.13/: ChangeLog  Makefile.in  NEWS  configure  configure.in
upwatch/trunk/patches/: bbd-tee.patch  libpcap-linux-timeout.patch  libstatgrab-configure.gnu  libstatgrab-cygwin.patch  libstatgrab-openbsd.patch  xmbmon203.patch
upwatch/trunk/scripts/: Makefile.am  fill_probe_description.pl  import_regex_files.pl  uw_maint.pl  uw_start  uw_stop
upwatch/trunk/st-1.4/: Makefile  Makefile.am
upwatch/trunk/st-1.6/: md.h
upwatch/trunk/st-1.7/: Makefile.am
upwatch/trunk/upwatch/: Makefile.am  common.c  compat.h  db.h  findsaddr-linux.c  generic.h  ifaddrlist.c  ifaddrlist.h  log.c  logregex.c  logregex.h  pr_bb.c  pr_bb_cpu.c  pr_generic.c  pr_httpget.c  pr_hwstat.c  pr_iptraf.c  pr_mysqlstats.c  pr_ping.c  pr_process.c  pr_snmpget.c  pr_sysstat.c  probe.h  setproctitle.c  setsin.c  slot.c  slot.h  spool.c  spool.h  util.c  uwstat.c  uwstat.h  xml.c  xml.h
upwatch/trunk/util/: Makefile.am  chklog.c  chklog_options.def  ctime.c  ctime_options.c  ctime_options.def  slot.c  slot_options.c  slot_options.def  uwq.c  uwq_options.c  uwq_options.def  uwregexp.c  uwsaidar.c
upwatch/trunk/uw_accept/: Makefile.am  cmd_options.def  cmd_options.init  run.c  uw_accept.conf  uw_accept.def  uw_accept_options.def
upwatch/trunk/uw_acceptbb/: Makefile.am  cmd_options.def  probe.def  run.c  uw_acceptbb.conf  uw_acceptbb.def
upwatch/trunk/uw_dns/: Makefile.am  probe.def  run.c  uw_dns.def
upwatch/trunk/uw_httpget/: Makefile.am  cmd_options.def  probe.def  run.c  uw_httpget.conf  uw_httpget.def  uw_httpget.mysql
upwatch/trunk/uw_imap/: Makefile.am  cmd_options.def  probe.def  run.c  uw_imap.conf  uw_imap.def
upwatch/trunk/uw_investigate/: Makefile.am  cmd_options.def  run.c  traceroute.c  uw_investigate.conf
upwatch/trunk/uw_iptraf/: Makefile.am  cmd_options.def  probe.def  run.c  tp.c  uw_iptraf.conf  uw_iptraf.def  uw_iptraf.mysql
upwatch/trunk/uw_mssql/: Makefile.am  cmd_options.def  probe.def  run.c  uw_mssql.conf  uw_mssql.def
upwatch/trunk/uw_mysql/: Makefile.am  cmd_options.def  probe.def  run.c  uw_mysql.conf  uw_mysql.def
upwatch/trunk/uw_mysqlstats/: Makefile.am  probe.def  run.c  uw_mysqlstats.conf  uw_mysqlstats.def
upwatch/trunk/uw_notify/: Makefile.am  bb.c  bb_cpu.c  diskfree.c  errlog.c  httpget.c  imap.c  iptraf.c  modules.inc  mssql.c  mysql.c  notify.c  ping.c  pop3.c  postgresql.c  process.c  run.c  snmpget.c  sysstat.c  tnotrun.c  uw_notify.conf  uw_notify.def  uw_notify_glob.h  uw_tnot.c  uw_tnot.h
upwatch/trunk/uw_null/: Makefile  Makefile.am  run.c  uw_null.conf  uw_null.def
upwatch/trunk/uw_ping/: Makefile.am  cmd_options.def  probe.def  run.c  uw_ping.conf  uw_ping.def  uw_ping.mysql
upwatch/trunk/uw_pop3/: Makefile.am  cmd_options.def  probe.def  run.c  uw_pop3.conf  uw_pop3.def
upwatch/trunk/uw_postgresql/: Makefile.am  cmd_options.def  probe.def  run.c  uw_postgresql.def
upwatch/trunk/uw_process/: Makefile.am  bb.c  bb_cpu.c  cmd_options.def  diskfree.c  errlog.c  generic_ct.c  httpget.c  hwstat.c  imap.c  insertcache.c  iptraf.c  modules.inc  mssql.c  mysql.c  mysqlstats.c  notify.c  ping.c  pop3.c  postgresql.c  process.c  process_httpget.c  process_iptraf.c  process_ping.c  run.c  smtp.c  snmpget.c  sysstat.c  tcpconnect.c  tnotrun.c  uw_process.conf  uw_process.def  uw_process_glob.h  uw_tnot.conf  uw_tnot.def
upwatch/trunk/uw_purple/: Makefile.am  run.c  uw_purple.conf  uw_purple.def
(+689 files in other folders)
